Add employee reactivation support
